tests/AdEspresso/FacebookBundle/DependencyInjection/Fixtures/valid/disabled.php
<?php

return [
    'facebook' => [
        'sdk' => [
            'enabled' => false,
        ],
        'ads' => [
            'enabled' => false,
        ],
    ],
];
