tests/AdEspresso/FacebookBundle/DependencyInjection/Fixtures/invalid/empty-sdk.php
<?php

return [
    'facebook' => [
        'sdk' => [],
        'ads' => [
            'enabled' => false,
        ],
    ],
];
